  * Fixed a bug where wrong Boxed object will be returned from Objective-C method.
  * Fixed the `motion support' command invocation to print both the stable and
    pre-release versions of RubyMotion.
  * Fixed a bug which it would triggered "Symbol not found" when it will use a
    constant which is not contained in older SDK.

= RubyMotion 2.38 =

  * Optimized the app executable size when a project has too many Ruby source
    files, by removing unnecessary internal code. ~30-60% lighter.
  * Disabled armv7s support for iOS projects. If you want to add armv7s support
    back, simply add the 'armv7s' value to the `app.archs['iPhoneOS']' config
    in the project's Rakefile. This architecture is no longer enabled by
    default in Xcode.
  * Fixed a bug where a compiled Core Data model would be removed when cleaning
    when an original `xcdatamodeld' was not available.
  * Fixed a bug where in certain circumstances cleaning would try to be
    performed when the vendor dir, e.g. `vendor/Pods' did not exist.
  * Fixed a few cases where the Yosemite version number was parsed incorrectly.
  * Added support for `axel' as an alternative to `curl' when downloading
    updates, which supports resuming and uses 10 connections to improve speed.
    Axel is available from http://wilmer.gaast.net/main.php/axel.html or can be
    installed through Homebrew: `$ brew install axel'.
  * Fixed a regression where `rake spec' did not work on OS X platform.
  * Fixed a bug where Dispatch.once did not work correctly with x86_64 on
    iPhone simulator and i386 on OS X platforms.
  * Fixed a bug where `:cflags' for `:static' vendored projects could not
    override those set by the toolchain by default. E.g. `-fno-modules'.
  * Fixed the `motion --version' command invocation to print both the stable
    and pre-release versions of RubyMotion.
  * [OSX] Fixed a bug where embedded frameworks would not be codesigned as per
    the current requirements for the App Store.